# rp2040-usb-can-bridge-fw

./: .clangd  CMakeLists.txt  LICENSE  README.md
driver/: drv_canfdspi_api.c  drv_canfdspi_api.h  drv_canfdspi_defines.h  drv_canfdspi_register.h  drv_spi.c  drv_spi.h
driver/mcp25xxfd_driver/canfdspi/: drv_canfdspi_api.c
driver/mcp25xxfd_driver/spi/: drv_spi.c  drv_spi.h
inc/: can.h  error.h  led.h  main.h  slcan.h  system.h  tusb_config.h
src/: can.c  core1.c  error.c  led.c  main.c  slcan.c  system.c  usb_descriptors.c
